# flutter_application_2

./: pubspec.yaml
android/: .gitignore
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native_piano.cpp
android/app/src/main/cpp/oboe/samples/parselib/src/main/cpp/wav/: WavFmtChunkHeader.cpp  WavFmtChunkHeader.h  WavStreamReader.cpp  WavStreamReader.h
android/app/src/main/kotlin/com/example/flutter_application_1/: MainActivity.kt
lib/: main.dart  native_piano.dart
lib/pages/: admin_lessons_page.dart  auth_gate.dart  courses.dart  edit_profile.dart  games.dart  lessons.dart  lessons_subjects.dart  login.dart  mainpage.dart  piano_kids_game_main.dart  sheets.dart  shop_page.dart  social.dart
lib/services/: api_client.dart  auth_api.dart  lessons_api.dart  native_piano.dart  piano_api.dart  shop_api.dart
lib/widgets/: bg_page.dart  bg_scaffold.dart  no_anim_route.dart  stroke_text.dart  video_controls_with_marks.dart
lib/widgets/home_tabs/: connectes_tab.dart  myaccount_tab.dart  rank_tab.dart  settings_tab.dart
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
test/: widget_test.dart
windows/flutter/: generated_plugins.cmake
